--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.21.1
   cloud_firestore: ^3.4.6
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
